fix multi docs srp